feat: 디스코드 대체용 인터랙션 및 크론 엔드포인트 연결
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,11 @@ PPTX_SECTION_PREFIX=찬양
 
 # Client-side PPTX config
 NEXT_PUBLIC_PPTX_SECTION_PREFIX=찬양
+
+# Discord Replacement (somang-discord -> storyboard)
+DISCORD_BOT_TOKEN=your-discord-bot-token
+DISCORD_CHANNEL_ID=your-discord-forum-channel-id
+DISCORD_GUILD_ID=your-discord-guild-id
+DISCORD_PUBLIC_KEY=your-discord-application-public-key
+DISCORD_CRON_SECRET=random-secret-for-discord-cron-routes
+DISCORD_ROLE_OPTIONS=김설교자,박인도자,이찬양
