--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,22 @@
   "functions": {
     "api/pptx.py": {
       "maxDuration": 60
+    },
+    "api/cron/discord/create-thread": {
+      "maxDuration": 60
+    },
+    "api/cron/discord/parse-comments": {
+      "maxDuration": 60
     }
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron/discord/create-thread",
+      "schedule": "0 0 * * 1"
+    },
+    {
+      "path": "/api/cron/discord/parse-comments",
+      "schedule": "*/2 * * * *"
+    }
+  ]
 }
